fix flickerings on movie list + add fade

--- a/MovieDbAssistant.App/rsc/html/templates/arp188-static-1.0.0/css/styles.css
+++ b/MovieDbAssistant.App/rsc/html/templates/arp188-static-1.0.0/css/styles.css
@@ -691,6 +691,10 @@ table.g-movie-detail-grid2-row-1 {
     overflow-y:hidden;
 }
 
+.vertical-scroll {
+    overflow-y: scroll;
+}
+
 /* #endregion */
 
 /* #region fonts */
